syntax = "proto3";
package dwn.v1;

import "google/api/annotations.proto";
import "dwn/v1/genesis.proto";

option go_package = "github.com/sonr-io/snrd/x/dwn/types";

// ╭─────────────────────────────────────────────────────────╮
// │                  RPC Query Service                      │
// ╰─────────────────────────────────────────────────────────╯

// Query provides defines the gRPC querier service.
service Query {
  // Params queries all parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/vault/v1/params";
  }

  // Spawn is a rate-limited query that spawns a new vault with unclaimed state.
  rpc Spawn(QuerySpawnRequest) returns (QuerySpawnResponse) {
    option (google.api.http).get = "/dwn/v1/spawn";
  }

  // Check returns the status of a vault.
  rpc Check(QueryCheckRequest) returns (QueryCheckResponse) {
    option (google.api.http).get = "/dwn/v1/check/{cid}";
  }
}

// ╭──────────────────────────────────────────────────────────╮
// │                  RPC Query Messages                      │
// ╰──────────────────────────────────────────────────────────╯

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1;
}

// QuerySpawnRequest is the request type for the Query/Spawn RPC method.
message QuerySpawnRequest {}

// QuerySpawnResponse is the response type for the Query/Spawn RPC method.
message QuerySpawnResponse {
  // Cid of the new vault.
  string cid = 1;

  // Address of the new vault.
  string address = 2;

  // Redirect is the redirect of the vault.
  string redirect = 3;
}

message QueryCheckRequest {
  // Cid of the vault to check.
  string cid = 1;
}

message QueryCheckResponse {
  // Address of the vault.
  string address = 1;

  // Redirect is the redirect of the vault.
  string redirect = 2;

  // Status is the status of the vault.
  string status = 3;
}
